[gd_scene load_steps=13 format=3 uid="uid://dppo0cfpn58tx"]

[ext_resource type="Texture2D" uid="uid://vnj4acjigcrf" path="res://image/enemies/drone.png" id="1_2u38k"]
[ext_resource type="Script" path="res://data/enemies/drone.gd" id="1_8mygj"]
[ext_resource type="Shader" path="res://data/enemies/drone.gdshader" id="2_mh1sf"]
[ext_resource type="Texture2D" uid="uid://cx7xapxlmuhpt" path="res://image/explosions/explosion_3.png" id="3_w7jm5"]
[ext_resource type="AudioStream" uid="uid://bbhsd24xac3ia" path="res://audio/solid_impact.ogg" id="5_jdo3e"]
[ext_resource type="AudioStream" uid="uid://blm2uhny6fap6" path="res://audio/explosion.wav" id="6_tmlop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yp77l"]
resource_local_to_scene = true
shader = ExtResource("2_mh1sf")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/alpha = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7v5en"]
radius = 83.9524

[sub_resource type="CircleShape2D" id="CircleShape2D_phb3a"]
radius = 875.416

[sub_resource type="Animation" id="Animation_un0fd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_w7qms"]
resource_name = "explosion"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroneImage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_movement"
}]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sounds/ExplosionSound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_tmlop")
}],
"times": PackedFloat32Array(0.4)
}
tracks/5/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_160tj"]
_data = {
"RESET": SubResource("Animation_un0fd"),
"explosion": SubResource("Animation_w7qms")
}

[node name="Drone" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_8mygj")

[node name="DroneImage" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yp77l")
rotation = 1.5708
texture = ExtResource("1_2u38k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7v5en")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_phb3a")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_w7jm5")
hframes = 8
vframes = 8
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_160tj")
}

[node name="Sounds" type="Node" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_jdo3e")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="Sounds"]
volume_db = 10.0

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
